RESOLVED FIXED277953
Regressions in JITless WASM thunks on armv7
https://bugs.webkit.org/show_bug.cgi?id=277953
Summary Regressions in JITless WASM thunks on armv7
Max Rottenkolber
Reported 2024-08-12 08:12:02 PDT
https://github.com/WebKit/WebKit/pull/31401 introduced some regressions on armv7.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-19 08:12:13 PDT
EWS
Comment 2 2024-08-20 16:43:56 PDT
Committed 282534@main (de7fb132ff57): <https://commits.webkit.org/282534@main> Reviewed commits have been landed. Closing PR #32039 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.