[JSC] Fix some armv7 regressions introduces by JITless WASm entry thunks https://bugs.webkit.org/show_bug.cgi?id=277953

Reviewed by Justin Michaud.

https://github.com/WebKit/WebKit/pull/31401 introduced some
regressions on armv7, this patch addresses those.

* Source/JavaScriptCore/jit/FPRInfo.h:
* Source/JavaScriptCore/wasm/WasmOperations.cpp:
(JSC::Wasm::JSC_DEFINE_JIT_OPERATION):
* Source/JavaScriptCore/wasm/js/JSToWasm.cpp:
(JSC::Wasm::marshallJSResult):
(JSC::Wasm::createJSToWasmJITInterpreter):

Canonical link: https://commits.webkit.org/282534@main